--- a/app_conf.yml
+++ b/app_conf.yml
@@ -2,6 +2,10 @@ version: 1
 datastore:
   user: ram
   password: Password
-  hostname: localhost
+  hostname: acit3855audit.westus3.cloudapp.azure.com
   port: 3306
   db: arch
+events:
+  hostname: acit3855audit.westus3.cloudapp.azure.com
+  port: 9092
+  topic: events
